--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
