--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "joi": "^17.9.2",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
