--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_DB_URL=mongodb://root:password@mongodb_pokemon:27017/?authSource=admin
+MONGO_DB_URL=mongodb://root:password@localhost:27017/?authSource=admin
