--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.1",
+    "@nestjs/throttler": "^4.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
