--- a/config/kong/kong.yaml
+++ b/config/kong/kong.yaml
@@ -24,7 +24,7 @@ services:
       - name: oidc
         config:
           client_id: 'pokemon-service'
-          client_secret: 'dU1am0MJRND4YJj4R4RdBfGT1rscpWBl'
+          client_secret: '<update if using client authentication confidential access type for OIDC>'
           realm: pokemon
           introspection_endpoint: 'http://192.168.0.20:9080/realms/pokemon/protocol/openid-connect/token/introspect'
           discovery: 'http://192.168.0.20:9080/realms/pokemon/.well-known/openid-configuration'
