--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,7 @@ services:
       POSTGRES_DB: kong
 
   keycloak-iam:
+    restart: always
     build:
       context: .
       dockerfile: ./devops/Keycloak.Dockerfile
