--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.0",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
